k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: tech-challenge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tech-challenge-app
  template:
    metadata:
      labels:
        app: tech-challenge-app
    spec:
      containers:
        - name: tech-challenge-app
          image: public.ecr.aws/p6c0d2v5/fiap-soat-techchallenge:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
