k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: tech-challenge
spec:
  type: LoadBalancer
  selector:
    app: tech-challenge-app
  ports:
    - port: 80
      targetPort: 8080
